[gd_scene load_steps=6 format=3 uid="uid://c0n43aeimp0ns"]

[ext_resource type="Script" path="res://scenes/fighting/Friendly.gd" id="1_c7eoa"]
[ext_resource type="Texture2D" uid="uid://ig1nba8oydqx" path="res://assets/fighters/hero_1.png" id="2_hrmhx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hapvm"]
size = Vector2(64, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm5li"]
bg_color = Color(0.666667, 0.0352941, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bshbd"]
bg_color = Color(0, 0.784314, 0, 0.588235)

[node name="Friendly" type="Area2D"]
collision_layer = 5
collision_mask = 0
script = ExtResource("1_c7eoa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hrmhx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_hapvm")

[node name="MoveRay" type="RayCast2D" parent="."]
target_position = Vector2(96, 1)
collision_mask = 25
collide_with_areas = true

[node name="RightHand" type="Sprite2D" parent="."]
position = Vector2(16, 8)
scale = Vector2(0.5, 0.5)

[node name="LeftHand" type="Sprite2D" parent="."]
position = Vector2(-16, 8)
scale = Vector2(0.5, 0.5)
flip_h = true

[node name="RangeRay" type="RayCast2D" parent="."]
collision_mask = 24
collide_with_areas = true

[node name="MeleeRay" type="RayCast2D" parent="."]
collision_mask = 8
collide_with_areas = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -30.0
offset_top = -24.0
offset_right = 30.0
offset_bottom = -20.0
theme_override_styles/background = SubResource("StyleBoxFlat_gm5li")
theme_override_styles/fill = SubResource("StyleBoxFlat_bshbd")
value = 100.0
show_percentage = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
